added a little feature to the a tag ;)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h1 id="title-tx">Meet new and interesting dogs nearby.</h1>
       <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
-      <p><a href="#" style="color: white; text-decoration: underline;">Learn more</a></p>
+      <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: white; text-decoration: underline;">Learn more</a></p>
     </div>
     <div class="col-lg-6">
       <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
